--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,9 @@
 body {
   font-family: "Roboto Condensed", sans-serif;
 }
+a {
+  text-decoration: none;
+}
 
 .main-container {
   height: 300px;
@@ -15,12 +18,12 @@ body {
 }
 
 .social-links-footer {
-  display: flex;
+ 
   list-style: none;
 }
 
 .social-links-footer li {
-  padding-right: 25px;
+  padding-left: 15px;
 }
 
 .social-links-footer i {
@@ -40,6 +43,19 @@ body {
   padding-right: 20px;
 }
 
+.editions-links a,
+.about-links a {
+  text-decoration: none;
+}
+
 .link-nw {
   text-decoration: none;
+}
+
+.search-logo{
+  margin-left: 10px;
+}
+
+.lbl-edition{
+  padding-left: 10px;
 }
