--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -1,7 +1,6 @@
 .navbar {
   height: 50px;
   background-color: #f72210;
-  margin-top: 65px;
 }
 
 .logo-img {
@@ -10,9 +9,14 @@
 }
 
 .login-icon {
-  color: #fff;
+  
   margin-right: 35px;
   font-size: 18px;
+}
+.logo-img-nav{
+  height: 35px;
+  width: 160px;
+  fill: white;
 }
 
 .subscribe-btn {
@@ -34,7 +38,7 @@
 .link-nw svg {
   width: 236px;
   fill: #f72210;
-  margin: 10px 0;
+  margin: 5px 0;
 }
 
 .link-nw span {
@@ -45,4 +49,11 @@
 .about-links li {
   border-right: 1px solid #d9d9d9;
   padding-left: 20px;
+}
+
+.cpy-right-footer{
+  font-size: 12px;
+  line-height: 12px;
+  text-transform: uppercase;
+  color: #666;
 }
